--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.2"
+    "autoprefixer": "10.4.16",
+    "postcss": "8.4.31",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.3"
   },
   "devDependencies": {
-    "@types/react": "^18.2.9",
-    "@types/react-dom": "^18.2.4",
-    "@vitejs/plugin-react": "^2.2.0",
-    "typescript": "^4.9.5",
-    "vite": "^3.2.7"
+    "@types/react": "18.2.28",
+    "@types/react-dom": "18.2.13",
+    "@vitejs/plugin-react": "4.1.0",
+    "typescript": "5.2.2",
+    "vite": "4.4.11"
   }
 }
