--- a/package.json
+++ b/package.json
@@ -18,15 +18,10 @@
   "devDependencies": {
     "@types/react": "18.2.28",
     "@types/react-dom": "18.2.13",
-    "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@vitejs/plugin-react": "4.1.0",
-    "eslint": "8.52.0",
-    "eslint-config-prettier": "9.0.0",
-    "eslint-config-standard-with-typescript": "39.1.1",
-    "eslint-plugin-import": "2.28.1",
-    "eslint-plugin-n": "16.2.0",
-    "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-react": "7.33.2",
+    "vite-plugin-eslint": "^1.8.1",
+    "eslint": "^8.53.0",
+    "eslint-config-react-app": "^7.0.1",
     "prettier": "3.0.3",
     "typescript": "^5.2.2",
     "vite": "4.4.11"
