--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.16",
+    "framer-motion": "^10.18.0",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -19,11 +20,11 @@
     "@types/react": "18.2.28",
     "@types/react-dom": "18.2.13",
     "@vitejs/plugin-react": "4.1.0",
-    "vite-plugin-eslint": "^1.8.1",
     "eslint": "^8.53.0",
     "eslint-config-react-app": "^7.0.1",
     "prettier": "3.0.3",
     "typescript": "^5.2.2",
-    "vite": "4.4.11"
+    "vite": "4.4.11",
+    "vite-plugin-eslint": "^1.8.1"
   }
 }
