--- a/package.json
+++ b/package.json
@@ -9,22 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "autoprefixer": "10.4.16",
     "framer-motion": "^10.18.0",
-    "postcss": "8.4.31",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/react": "18.2.28",
-    "@types/react-dom": "18.2.13",
-    "@vitejs/plugin-react": "4.1.0",
-    "eslint": "^8.53.0",
-    "eslint-config-react-app": "^7.0.1",
-    "prettier": "3.0.3",
-    "typescript": "^5.2.2",
-    "vite": "4.4.11",
-    "vite-plugin-eslint": "^1.8.1"
+    "@types/react": "18.2.47",
+    "@types/react-dom": "18.2.18",
+    "@typescript-eslint/eslint-plugin": "6.18.1",
+    "@typescript-eslint/parser": "6.18.1",
+    "@vitejs/plugin-react-swc": "3.5.0",
+    "eslint": "8.56.0",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.5",
+    "typescript": "5.3.3",
+    "typescript-plugin-css-modules": "5.0.2",
+    "vite": "5.0.11"
   }
 }
